# sqlalchemy-create-table-as

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package  publish-package.yaml
sqlalchemy_create_table_as/: __init__.py  create_table.py  create_table.pyi
